<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.mmu_application.Sign_in">


    <LinearLayout
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="262dp"
            android:layout_height="102dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/univ_name_sign_in"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"

            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"

            android:text="@string/Alumni"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"

            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_margin="10dp"
            android:background="#5EC2AAEE"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"


                >

                <TextView
                    android:id="@+id/login_as_student_id"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#F5F0BE"
                    android:text="@string/login_As_Alumni"
                    android:textAlignment="center"
                    android:textColor="#046D08"
                    android:textSize="15sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="10dp"
                    android:background="#EEAE99"
                    android:text="@string/login_As_Admin"
                    android:textAlignment="center"
                    android:textColor="#0A2AD3"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_margin="2dp"
                android:elevation="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"

                >




                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="Enter your email"
                    android:textColorHint="#D76D6767"


                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_singnin_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_person_black_24dp"
                        android:lines="1"
                        android:textColor="#000000"
                        android:inputType="textWebEmailAddress"

                        />



                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    app:passwordToggleEnabled="true"
                    android:textColorHint="#D76D6767"
                    app:passwordToggleTint="#000000"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_singnin_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="#000000"


                        />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="Admin Security Pass-Key"
                    app:passwordToggleEnabled="true"
                    android:textColorHint="#D76D6767"
                    app:passwordToggleTint="#000000"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passkey_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="#000000"


                        />


                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/forget_id"
                    android:layout_width="156dp"
                    android:layout_height="36dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="20dp"
                    android:background="#7AEEE7AB"
                    android:elevation="3dp"
                    android:text="@string/sign_in_forget"
                    android:textAllCaps="false"
                    android:textColor="#0F0F0F"
                    android:textSize="12sp"


                    />

                <Button
                    android:id="@+id/signin_button_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_round"
                    android:elevation="10dp"
                    android:text="@string/sign_in_button"
                    android:textAllCaps="false"
                    android:textColor="#ffff"
                    android:textSize="20sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/new_user_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="New user ? Signup Here"
                    android:textAlignment="center"
                    android:textColor="#001FE4"

                    />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</LinearLayout>





