<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mmu_application.Singn_up"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="262dp"
            android:layout_height="102dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/univ_name_sign_in"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"

            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/alegreya_sc_bold_italic"
            android:text="@string/Alumni"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"

            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_margin="5dp"
            android:background="#5EC2AAEE"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F5F0BE"
                android:text="Enter Sign up details"
                android:textAlignment="center"
                android:textColor="#046D08"
                android:textSize="15sp"
                android:textStyle="bold"

                />


        </LinearLayout>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:elevation="5dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"

                >




                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/username_hint"
                    android:textColorHint="#D76D6767"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Username_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_person_black_24dp"
                        android:lines="1"
                        android:textColor="#000000"
                        />




                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="email"
                    android:textColorHint="#D76D6767"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_email_black_24dp"
                        android:lines="1"
                        android:inputType="textWebEmailAddress"
                        android:textColor="#000000"
                        />




                </com.google.android.material.textfield.TextInputLayout>




                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:textColor="#000000"
                    app:passwordToggleEnabled="true"
                    android:textColorHint="#D76D6767"
                    app:passwordToggleTint="#000000"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="#000000"

                        />


                </com.google.android.material.textfield.TextInputLayout>




                <Button
                    android:id="@+id/signup_button_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_round"
                    android:elevation="10dp"
                    android:text="Sign up"
                    android:textAllCaps="false"
                    android:textColor="#ffff"
                    android:textSize="20sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/signup_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Click here to Sign in"
                    android:textAlignment="center"
                    android:textColor="#001FE4"

                    />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>